<resources>
    <string name="app_name">swoosh</string>
    <string name="find_a_tean_in_your_city_dominate_the_league"><![CDATA[Find a tean in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="logo">logo</string>
    <string name="background_image">background image</string>
    <string name="next">NEXT</string>
    <string name="desired_league">desired league:</string>
    <string name="leaguesekection">leagueSekection</string>
    <string name="app_logo">app logo</string>
    <string name="baller">BALLER</string>
</resources>
